<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/dialog_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/unit_bg"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialogtitle"
            style="@style/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/app_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unit_bottom_border" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvMessage"
            style="@style/dialog_value_text_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/connection_not_available" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unit_bottom_border_" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_bottom_bg"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/dialog_positive"
            style="@style/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_red_sel"
            android:text="@string/btn_ok" />

        <Button
            android:id="@+id/dialog_negative"
            style="@style/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_grey_sel"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</LinearLayout>