<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/titlebar" />

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_menu_sel" />

        <ImageView
            android:id="@+id/imgFavUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/btn_list_menu_sel" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/unit_bg"
                android:orientation="horizontal"
                android:padding="12dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvUnitSelKey"
                        style="@style/unit_sel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/unit_selection" />

                    <TextView
                        android:id="@+id/tvUnitSelVal"
                        style="@style/dialog_value_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/unit_sel_bg"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:text="@string/na" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvUnitValueKey"
                        style="@style/unit_sel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/value" />

                    <TextView
                        android:id="@+id/tvUnitValueVal"
                        style="@style/unit_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/unit_sel_bg"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:text="@string/na" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/unit_bottom_border" />

            <com.smart.unitconverter.dslv.DragSortListView
                android:id="@+id/lvUnitConverter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/list_devider"
                android:dividerHeight="1dp"
                android:listSelector="@drawable/list_selector_common"
                app:collapsed_height="1dp"
                app:drag_enabled="true"
                app:drag_handle_id="@id/drag_handle"
                app:drag_scroll_start="0.33"
                app:drag_start_mode="onLongPress"
                app:float_alpha="0.8"
                app:float_background_color="@color/unit_bottom_border"
                app:remove_enabled="false"
                app:slide_shuffle_speed="0.4"
                tools:listitem="@layout/unit_converter_item" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/top_bar_shadow" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
    </LinearLayout>

</LinearLayout>